# advanced-timeseries-02427

./: .gitignore  README.md  pyproject.toml
assignment-1/: DataPart4.csv  STAR.py  comp1_part4.ipynb  comp1_part5.ipynb  comp1_part5_2.ipynb  estimator.py  forside.tex  ldf.py  main.tex  references.bib  regsmooth1d.py  regsmooth2d.py  smooth_localreg.py
assignment-2/: comp_ex_2_2011.ipynb  forside.ipynb  main.tex  references.bib
src/models/: IGAR.py  SETAR.py
src/utils/: ekg.py  ekg_gemini.py  ldf.py  regsmooth2d.py
